# EnergyEnergyCorrelators

./: .gitignore  .gitmodules  .travis.yml  Dockerfile  Dockerfile.i686  Dockerfile.x86_64  LICENSE  MANIFEST.in  README.md  prepare-eec-docker.sh  pyproject.toml  pytest.ini  setup.cfg  setup.py  update_boost_histogram.sh
.github/workflows/: build-wheels.yml
eec/: __init__.py  core.cpp  core.pyx  eec.cpp  eec.py  eeccomps.pxd  eeccore.cpp  eeccore.pyx  update_boost_histogram.sh
eec/include/: EEC.hh  EECBase.hh  EECComputations.hh  EECConfig.hh  EECEvent.hh  EECEvents.hh  EECHist.hh  EECHist1D.hh  EECHist3D.hh  EECHistBase.hh  EECHistUtils.hh  EECLongestSide.hh  EECMultinomial.hh  EECTriangleOPE.hh  EECUtils.hh
eec/swig/: eec.i  numpy_helpers.i
eec/tests/: helpers.py  reproduce_fail.py  test_eec.py
examples/: EventProducer.hh  Makefile  NPZEventProducer.hh  basic_example.cpp  basic_example.py  multithreaded_example.cpp  plot_example.py
examples/include/: EventProducer.hh  ExampleUtils.hh  NPZEventProducer.hh
scripts/: clean.sh  install-libomp-macos.sh  prepare-eec-docker.sh  pypi-upload.sh  update_boost_histogram.sh
