[metadata]

name = EnergyEnergyCorrelators
description = EEC computations in python
author = Patrick T. Komiske III
author_email = pkomiske@mit.edu
license = GPL-3.0
license_file = LICENSE
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pkomiske/EnergyEnergyCorrelators
keywords =
    eec
    energy-energy correlator
    irc-safe
    infrared safety
    operator product expansion
    weighted cross section

[options]

packages = find:
zip_safe = False

python_requires =
    >= 3.5

install_requires =
    oldest-supported-numpy

setup_requires = 
    pytest-runner

tests_require =
    energyflow >= 1.3.0
    pytest >= 6.0.0
    scipy >= 1.0.0

[aliases]

test = pytest
